syntax = "proto3";

package cloud;

option go_package = "pkg/cloud";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service TestKubeCloudAPI {
    // Deprecated, use ExecuteAsync instead,
    // Will remove this after we fully migrate to ExecuteAsync.
    rpc Execute(stream ExecuteResponse) returns (stream ExecuteRequest);
    rpc Send(stream WebsocketData)      returns (google.protobuf.Empty);
    rpc Call(CommandRequest)            returns (CommandResponse);
    rpc ExecuteAsync(stream ExecuteResponse) returns (stream ExecuteRequest);
    rpc GetLogsStream(stream LogsStreamResponse) returns (stream LogsStreamRequest);
}

enum LogsStreamRequestType {
  STREAM_LOG_MESSAGE = 0;
  STREAM_HEALTH_CHECK = 1;
}

message LogsStreamRequest {
  string stream_id = 1;
  string execution_id = 2;
  LogsStreamRequestType request_type = 3;
}

message LogsStreamResponse {
  string stream_id = 1;
  int64 seq_no = 2;
  string log_message = 3;
  bool is_error = 4;
}

message CommandRequest {
  string command = 1;
  google.protobuf.Struct payload  = 2;
}

message CommandResponse {
  bytes response     = 1;
}

message ExecuteRequest {
    string method                    = 1;
    string url                       = 2;
    map<string, HeaderValue> headers = 3;
    bytes body                       = 4;
    string message_id                = 5;
}

message HeaderValue {
   repeated string header = 1;
}

message ExecuteResponse {
    int64 status                     = 1;
    map<string, HeaderValue> headers = 2;
    bytes body                       = 3;
    string message_id                = 4;
}

enum Opcode {
  UNSPECFIED   = 0;
  TEXT_FRAME   = 1;
  BINARY_FRAME = 2;
  HEALTH_CHECK = 3;
}

message WebsocketData {
    Opcode opcode = 1;
    bytes body    = 2;
}
